generator client {
  provider        = "prisma-client-js"
  previewFeatures = ["tracing"]
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

// ---------------------------------------------------------------------------
// Tenancy: Org -> Workspace -> User, joined by Membership (which carries role).
// A user can belong to multiple workspaces across multiple orgs.
// ---------------------------------------------------------------------------

model Org {
  id        String   @id @default(uuid())
  name      String
  slug      String   @unique
  createdAt DateTime @default(now())

  workspaces Workspace[]
}

// Mirrors the four tiers on the public Pricing page (pages/marketing/
// Pricing.jsx) — FREE is the default every workspace starts on, matching
// the "no plan = Free plan, limited" behavior. Credit grants and feature
// gates per plan live in config/planConfig.js, not here, so pricing changes
// never need a migration.
enum Plan {
  FREE
  BASIC
  PROFESSIONAL
  ORGANIZATION
}

// How often a paid subscription bills — see config/planConfig.js for the
// month-count and discount each maps to.
enum BillingInterval {
  MONTH
  QUARTER
  YEAR
}

model Workspace {
  id                   String          @id @default(uuid())
  orgId                String
  name                 String
  plan                 Plan            @default(FREE)
  monthlyCreditGrant   Int             @default(100)
  // Null until the workspace has ever started a checkout — billing is
  // opt-in, not every workspace has a Stripe customer.
  stripeCustomerId     String?         @unique
  stripeSubscriptionId String?         @unique
  // Set when a paid subscription checkout activates (see
  // stripeService.activatePlanSubscription) — never touched by the
  // super-admin plan override, which is a support action, not a purchase.
  // Drives the minimum commitment: self-serve downgrade between paid tiers
  // is blocked until billingInterval's length has elapsed since this date
  // (1/3/12 months for MONTH/QUARTER/YEAR — the interval IS the commitment).
  planActivatedAt      DateTime?
  billingInterval      BillingInterval @default(MONTH)
  createdAt            DateTime        @default(now())

  org                Org                  @relation(fields: [orgId], references: [id], onDelete: Cascade)
  memberships        Membership[]
  lists              List[]
  creditLedger       CreditLedgerEntry[]
  emailReveals       EmailReveal[]
  companyDetailViews CompanyDetailView[]
  sequences          Sequence[]
  enrollments        SequenceEnrollment[]
  suppressions       SuppressionEntry[]
  tickets            Ticket[]

  @@index([orgId])
}

model User {
  id                  String    @id @default(uuid())
  email               String    @unique
  // Optional because a Google-only account (see googleId) never sets one —
  // authService.login's verifyPassword call is null-safe (returns false
  // rather than throwing) so such an account simply can't log in with a
  // password until/unless it also sets one.
  passwordHash        String?
  name                String
  // Google "sub" claim once this account has signed in with Google — set
  // either at signup (Google-only account) or retroactively the first time
  // an existing password account signs in with Google using the same
  // verified email (see authService.loginWithGoogle). Null means never
  // linked.
  googleId            String?   @unique
  // Set by a super admin (see SuperAdmin below) to immediately cut off
  // login/refresh — checked in authService.login/refresh, not per-request,
  // matching this app's stateless-access-token design (see docs on
  // ACCESS_TOKEN_TTL_SECONDS). Null means never suspended.
  suspendedAt         DateTime?
  // Password signups start false and can't log in until they click the
  // confirm link emailed to them (see authService.verifyEmail); Google
  // signups start true since Google already verified the email. Grandfathered
  // to true for every account that existed before this field was added — see
  // the add_email_verification migration.
  emailVerified       Boolean   @default(false)
  // Opts a user out of the admin promotional broadcast (see
  // adminService.sendPromotionalBroadcast) without touching their ability to
  // receive transactional mail (verification, tickets, billing). Set via the
  // unsubscribe link every promotional email includes.
  marketingOptOut     Boolean   @default(false)
  // Null until the guided first-login tour is finished or skipped — checked
  // once per session by the frontend to decide whether to show it. Set once
  // and never cleared, so it truly shows only the first time, across
  // devices/browsers, not per-localStorage.
  tutorialCompletedAt DateTime?
  createdAt           DateTime  @default(now())

  memberships        Membership[]
  emailReveals       EmailReveal[]
  companyDetailViews CompanyDetailView[]
  createdLists       List[]              @relation("ListCreatedBy")
  createdSequences   Sequence[]          @relation("SequenceCreatedBy")
  createdTickets     Ticket[]
  ticketMessages     TicketMessage[]
}

// ---------------------------------------------------------------------------
// Super admin: entirely separate credential space from the tenant User
// model above — no membership, no workspace, no shared login route. Signed
// with its own JWT secret (ADMIN_JWT_SECRET) and audience claim so a tenant
// access token can never be replayed against an admin-only route, or vice
// versa. See middleware/adminAuth.js and routes/admin.js.
// ---------------------------------------------------------------------------

model SuperAdmin {
  id           String   @id @default(uuid())
  email        String   @unique
  passwordHash String
  name         String
  createdAt    DateTime @default(now())

  uploadedImportBatches DatabaseImportBatch[] @relation("UploadedBy")
  approvedImportBatches DatabaseImportBatch[] @relation("ApprovedBy")
  ticketMessages        TicketMessage[]
  auditLogEntries       AdminAuditLog[]
}

enum AdminAuditAction {
  SUSPEND_USER
  UNSUSPEND_USER
  UPDATE_PLAN
  ADD_CREDITS
}

// Compliance trail for support-desk overrides — who (which super admin) did
// what to whom. targetUserId is deliberately a plain field, not a relation
// (same "soft reference" pattern as CreditLedgerEntry.contactId), so the log
// entry survives even if the target User row is later gone; look it up
// manually where needed rather than via `include`.
model AdminAuditLog {
  id           String           @id @default(uuid())
  superAdminId String
  action       AdminAuditAction
  targetUserId String?
  // Action-specific context — e.g. { amount } for ADD_CREDITS, { from, to }
  // for UPDATE_PLAN. Nothing here substitutes for the action enum itself.
  metadata     Json?
  createdAt    DateTime         @default(now())

  superAdmin SuperAdmin @relation(fields: [superAdminId], references: [id])

  @@index([targetUserId, createdAt])
  @@index([createdAt])
}

enum ImportBatchStatus {
  PROCESSING
  PENDING_APPROVAL
  APPROVED
  FAILED
}

// A super-admin-uploaded CSV in the RPF format ("Extend Database"). Parsed
// rows are inserted into Company/Contact immediately so admins can review
// the batch, but withheld from Elasticsearch (not searchable) until the
// batch is explicitly approved — see databaseImportService.js.
model DatabaseImportBatch {
  id                String            @id @default(uuid())
  filename          String
  status            ImportBatchStatus @default(PROCESSING)
  totalRows         Int
  insertedContacts  Int               @default(0)
  insertedCompanies Int               @default(0)
  errorCount        Int               @default(0)
  errors            Json?
  uploadedById      String
  approvedById      String?
  createdAt         DateTime          @default(now())
  processedAt       DateTime?
  approvedAt        DateTime?

  uploadedBy SuperAdmin  @relation("UploadedBy", fields: [uploadedById], references: [id])
  approvedBy SuperAdmin? @relation("ApprovedBy", fields: [approvedById], references: [id])
  companies  Company[]
  contacts   Contact[]

  @@index([status])
}

enum Role {
  OWNER
  ADMIN
  MEMBER
}

model Membership {
  id          String   @id @default(uuid())
  userId      String
  workspaceId String
  role        Role     @default(MEMBER)
  createdAt   DateTime @default(now())

  user      User      @relation(fields: [userId], references: [id], onDelete: Cascade)
  workspace Workspace @relation(fields: [workspaceId], references: [id], onDelete: Cascade)

  // One membership per (user, workspace) — role changes update this row, they
  // don't create a new one.
  @@unique([userId, workspaceId])
  @@index([workspaceId])
}

// ---------------------------------------------------------------------------
// Data graph: Company/Contact are the shared dataset (not tenant-scoped) —
// every workspace searches the same underlying company/people database.
// Tenant-scoped state (what a workspace has saved/revealed) lives below.
// ---------------------------------------------------------------------------

model Company {
  id            String   @id @default(uuid())
  name          String
  domain        String   @unique
  industry      String?
  headcountMin  Int?
  headcountMax  Int?
  location      String?
  techStack     String[]
  linkedinUrl   String?
  // Set when this row came from a super-admin CSV import still awaiting
  // approval — see DatabaseImportBatch. Null for every pre-existing/seeded
  // row and for approved-batch rows (cleared on approval).
  importBatchId String?
  createdAt     DateTime @default(now())
  updatedAt     DateTime @updatedAt

  contacts    Contact[]
  listItems   ListItem[]
  detailViews CompanyDetailView[]
  importBatch DatabaseImportBatch? @relation(fields: [importBatchId], references: [id])

  @@index([industry])
  @@index([name])
  @@index([importBatchId])
}

model Contact {
  id            String    @id @default(uuid())
  companyId     String
  firstName     String
  lastName      String
  title         String?
  seniority     String?
  department    String?
  // Populated once the pattern-finder/verifier has run (services/email*.js,
  // Phase 03). Serializers must mask this field unless the requesting
  // workspace has a matching EmailReveal row — see docs/07-credits-state.
  email         String?
  emailVerified Boolean   @default(false)
  phone         String?
  linkedinUrl   String?
  // Set by a GDPR/CCPA erasure request (privacyService.js) — once set, PII
  // fields above are wiped and this contact is permanently excluded from
  // search/reveal, not just for the workspace that requested it.
  redactedAt    DateTime?
  // See Company.importBatchId — same staged-for-review semantics.
  importBatchId String?
  createdAt     DateTime  @default(now())
  updatedAt     DateTime  @updatedAt

  company      Company              @relation(fields: [companyId], references: [id], onDelete: Cascade)
  listItems    ListItem[]
  emailReveals EmailReveal[]
  enrollments  SequenceEnrollment[]
  importBatch  DatabaseImportBatch? @relation(fields: [importBatchId], references: [id])

  @@index([companyId])
  @@index([lastName, firstName])
  @@index([importBatchId])
}

// ---------------------------------------------------------------------------
// Tenant-scoped: every model below carries a workspaceId and every query
// against them MUST filter by the authenticated request's workspace.
// See src/middleware/auth.js and the isolation tests in lists.test.js.
// ---------------------------------------------------------------------------

enum ListType {
  CONTACTS
  COMPANIES
}

model List {
  id          String   @id @default(uuid())
  workspaceId String
  name        String
  type        ListType
  createdById String
  createdAt   DateTime @default(now())

  workspace Workspace  @relation(fields: [workspaceId], references: [id], onDelete: Cascade)
  createdBy User       @relation("ListCreatedBy", fields: [createdById], references: [id])
  items     ListItem[]

  @@index([workspaceId])
}

model ListItem {
  id        String   @id @default(uuid())
  listId    String
  // Exactly one of contactId/companyId is set, matching the parent List's
  // type. Enforced in the service layer (services/listService.js) — Prisma
  // has no declarative XOR constraint.
  contactId String?
  companyId String?
  addedAt   DateTime @default(now())

  list    List     @relation(fields: [listId], references: [id], onDelete: Cascade)
  contact Contact? @relation(fields: [contactId], references: [id], onDelete: Cascade)
  company Company? @relation(fields: [companyId], references: [id], onDelete: Cascade)

  @@unique([listId, contactId])
  @@unique([listId, companyId])
  @@index([listId])
}

enum CreditReason {
  MONTHLY_GRANT
  EMAIL_REVEAL
  COMPANY_VIEW
  CSV_EXPORT
  SEQUENCE_ENROLLMENT
  TOPUP
  ADJUSTMENT
}

// Append-only — never UPDATE or DELETE a row. Balance is always
// workspace.monthlyCreditGrant + SUM(delta) [- reservations held in Redis].
// See README.md "How the credit flow works".
model CreditLedgerEntry {
  id          String       @id @default(uuid())
  workspaceId String
  delta       Int
  reason      CreditReason
  contactId   String?
  // Real money charged for this entry, in cents — only ever set on TOPUP
  // rows (a real Stripe purchase). Null for everything else, including
  // ADJUSTMENT rows (an admin-granted credit isn't revenue). This is the
  // only place a dollar amount is recorded anywhere in the schema; the
  // credit ledger otherwise deals purely in credit counts.
  amountCents Int?
  createdAt   DateTime     @default(now())

  workspace Workspace @relation(fields: [workspaceId], references: [id], onDelete: Cascade)

  @@index([workspaceId, createdAt])
}

// Audit trail + reveal-state: once any member of a workspace reveals a
// contact's email, the whole workspace can see it (the unique constraint is
// what makes reveals workspace-wide rather than per-user).
model EmailReveal {
  id           String   @id @default(uuid())
  workspaceId  String
  contactId    String
  revealedById String
  createdAt    DateTime @default(now())

  workspace  Workspace @relation(fields: [workspaceId], references: [id], onDelete: Cascade)
  contact    Contact   @relation(fields: [contactId], references: [id], onDelete: Cascade)
  revealedBy User      @relation(fields: [revealedById], references: [id])

  @@unique([workspaceId, contactId])
  @@index([workspaceId])
}

// Same shape and purpose as EmailReveal above, for the Company detail page:
// once any member of a workspace has paid to view a company's profile, the
// whole workspace can revisit it for free — the unique constraint is what
// makes a view workspace-wide and one-time rather than per-user/per-visit.
model CompanyDetailView {
  id          String   @id @default(uuid())
  workspaceId String
  companyId   String
  viewedById  String
  createdAt   DateTime @default(now())

  workspace Workspace @relation(fields: [workspaceId], references: [id], onDelete: Cascade)
  company   Company   @relation(fields: [companyId], references: [id], onDelete: Cascade)
  viewedBy  User      @relation(fields: [viewedById], references: [id])

  @@unique([workspaceId, companyId])
  @@index([workspaceId])
}

// ---------------------------------------------------------------------------
// Engagement: multi-step email cadences. A Sequence is a template (its
// Steps); a SequenceEnrollment is one contact's progress through it.
// ---------------------------------------------------------------------------

enum SequenceStatus {
  DRAFT
  ACTIVE
  PAUSED
  ARCHIVED
}

model Sequence {
  id          String         @id @default(uuid())
  workspaceId String
  name        String
  status      SequenceStatus @default(DRAFT)
  createdById String
  createdAt   DateTime       @default(now())

  workspace   Workspace            @relation(fields: [workspaceId], references: [id], onDelete: Cascade)
  createdBy   User                 @relation("SequenceCreatedBy", fields: [createdById], references: [id])
  steps       SequenceStep[]
  enrollments SequenceEnrollment[]

  @@index([workspaceId])
}

enum StepType {
  EMAIL
  WAIT
}

model SequenceStep {
  id         String   @id @default(uuid())
  sequenceId String
  // 0-based position — the engine advances currentStepIndex through these.
  order      Int
  type       StepType
  // WAIT steps only:
  waitDays   Int?
  // EMAIL steps only:
  subject    String?
  body       String?

  sequence Sequence @relation(fields: [sequenceId], references: [id], onDelete: Cascade)

  @@unique([sequenceId, order])
  @@index([sequenceId])
}

enum EnrollmentStatus {
  ACTIVE
  PAUSED
  COMPLETED
  UNENROLLED
}

model SequenceEnrollment {
  id               String           @id @default(uuid())
  sequenceId       String
  // Denormalized from Sequence so isolation queries never need a join —
  // same defense-in-depth pattern as List/CreditLedgerEntry.
  workspaceId      String
  contactId        String
  status           EnrollmentStatus @default(ACTIVE)
  currentStepIndex Int              @default(0)
  // When the scheduler should next advance this enrollment. Indexed — the
  // due-step processor's whole query is "WHERE nextStepDueAt <= now()".
  nextStepDueAt    DateTime?
  enrolledAt       DateTime         @default(now())
  unenrolledAt     DateTime?
  unenrolledReason String?

  sequence  Sequence            @relation(fields: [sequenceId], references: [id], onDelete: Cascade)
  workspace Workspace           @relation(fields: [workspaceId], references: [id], onDelete: Cascade)
  contact   Contact             @relation(fields: [contactId], references: [id], onDelete: Cascade)
  events    SequenceStepEvent[]

  // A contact can only be enrolled in a given sequence once at a time.
  @@unique([sequenceId, contactId])
  @@index([workspaceId])
  @@index([nextStepDueAt])
}

enum StepEventType {
  SENT
  OPENED
  CLICKED
  BOUNCED
  REPLIED
  UNSUBSCRIBED
}

model SequenceStepEvent {
  id              String        @id @default(uuid())
  enrollmentId    String
  stepIndex       Int
  type            StepEventType
  // The ESP's own event id, when it has one (webhook deliveries). Unique so
  // an at-least-once webhook redelivery can't double-count a SENT/OPENED/etc.
  providerEventId String?       @unique
  createdAt       DateTime      @default(now())

  enrollment SequenceEnrollment @relation(fields: [enrollmentId], references: [id], onDelete: Cascade)

  @@index([enrollmentId])
}

enum SuppressionReason {
  UNSUBSCRIBED
  BOUNCED
  MANUAL
}

// Workspace-scoped (not global) — a recipient unsubscribes from *this
// workspace's* sends, which is also what CAN-SPAM/GDPR compliance tracks
// per-sender. Checked at send time in the step processor, not at
// enrollment time — see sequenceProcessor.js.
model SuppressionEntry {
  id          String            @id @default(uuid())
  workspaceId String
  email       String
  reason      SuppressionReason
  createdAt   DateTime          @default(now())

  workspace Workspace @relation(fields: [workspaceId], references: [id], onDelete: Cascade)

  @@unique([workspaceId, email])
  @@index([workspaceId])
}

// ---------------------------------------------------------------------------
// Privacy / data-subject rights. Global, not workspace-scoped — this is a
// real person's right over the shared data graph itself, orthogonal to
// which tenant looked them up. See privacyService.js.
// ---------------------------------------------------------------------------

model DataSubjectOptOut {
  id          String   @id @default(uuid())
  email       String   @unique
  reason      String?
  requestedAt DateTime @default(now())
}

// ---------------------------------------------------------------------------
// Platform-wide (not workspace-scoped) payment gateway config, set by a
// super admin — see paymentSettingsService.js. Single row, id fixed to
// 'stripe' in application code rather than a schema default so every
// read/write path is an explicit, greppable literal.
// Secrets are AES-256-GCM ciphertext (see utils/crypto.js), never plaintext.
// ---------------------------------------------------------------------------

model PaymentGatewaySettings {
  id                     String   @id
  keySecretEncrypted     String?
  webhookSecretEncrypted String?
  updatedAt              DateTime @updatedAt
  updatedById            String?
}

// ---------------------------------------------------------------------------
// Support/sales ticketing. A Ticket is one thread; its opening message and
// every reply (from either side) are TicketMessage rows in creation order —
// there's no separate "body" field on Ticket itself, so the UI renders the
// thread uniformly instead of special-casing the first message. Predefined
// subjects and the 200-word reply limit live in config/ticketConfig.js, not
// here, matching the plan/credit config pattern elsewhere in this schema.
// ---------------------------------------------------------------------------

enum TicketType {
  SUPPORT
  SALES
}

// UNANSWERED: waiting on the admin (just created, or the user replied most
// recently). ANSWERED: the admin has replied and it's the user's turn.
// CLOSED: resolved, no further replies accepted. "Active" (shown to the
// user as their open tickets) is UNANSWERED + ANSWERED.
enum TicketStatus {
  UNANSWERED
  ANSWERED
  CLOSED
}

enum TicketAuthorType {
  USER
  ADMIN
}

model Ticket {
  id          String       @id @default(uuid())
  workspaceId String
  createdById String
  type        TicketType
  subject     String
  status      TicketStatus @default(UNANSWERED)
  createdAt   DateTime     @default(now())
  updatedAt   DateTime     @updatedAt
  closedAt    DateTime?

  workspace Workspace       @relation(fields: [workspaceId], references: [id], onDelete: Cascade)
  createdBy User            @relation(fields: [createdById], references: [id])
  messages  TicketMessage[]

  @@index([workspaceId])
  @@index([status])
  @@index([createdAt])
}

model TicketMessage {
  id            String           @id @default(uuid())
  ticketId      String
  authorType    TicketAuthorType
  // Exactly one of these is set, matching authorType — enforced in
  // ticketService.js, same convention as ListItem's contactId/companyId XOR.
  authorUserId  String?
  authorAdminId String?
  body          String
  createdAt     DateTime         @default(now())

  ticket      Ticket      @relation(fields: [ticketId], references: [id], onDelete: Cascade)
  authorUser  User?       @relation(fields: [authorUserId], references: [id])
  authorAdmin SuperAdmin? @relation(fields: [authorAdminId], references: [id])

  @@index([ticketId])
}
